DEFEDIT-1533 Manual merge of project.clj